WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173462
Handle timeout of prepareForPictureInPictureStopWithCompletionHandler.
https://bugs.webkit.org/show_bug.cgi?id=173462
Summary
Handle timeout of prepareForPictureInPictureStopWithCompletionHandler.
Jeremy Jones
Reported
2017-06-16 02:43:29 PDT
Handle timeout of prepareForPictureInPictureStopWithCompletionHandler.
Attachments
Patch
(5.63 KB, patch)
2017-06-16 02:48 PDT
,
Jeremy Jones
jer.noble
: review+
Details
Formatted Diff
Diff
Patch for landing.
(5.63 KB, patch)
2017-06-16 14:22 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-06-16 02:44:25 PDT
rdar://problem/32128170
Jeremy Jones
Comment 2
2017-06-16 02:48:28 PDT
Created
attachment 313066
[details]
Patch
Jer Noble
Comment 3
2017-06-16 12:50:34 PDT
Comment on
attachment 313066
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313066&action=review
Looks good; just a couple of tiny nits.
> Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:918 > - > +
Whitespace.
> Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:957 > - > +
Whitespace.
> Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1004 > - LOG(Fullscreen, "WebVideoFullscreenInterfaceAVKit::watchdogTimerFired(%p) - no exit fullscreen response in %gs; forcing fullscreen hidden.", this, defaultWatchdogTimerInterval); > + LOG(Fullscreen, "WebVideoFullscreenInterfaceAVKit::watchdogTimerFired(%p) - no exit fullscreen; forcing fullscreen hidden.", this);
Is this intentional?
Jeremy Jones
Comment 4
2017-06-16 13:06:49 PDT
(In reply to Jer Noble from
comment #3
)
> Comment on
attachment 313066
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=313066&action=review
> > Looks good; just a couple of tiny nits. > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:918 > > - > > + > > Whitespace. > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:957 > > - > > + > > Whitespace. > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1004 > > - LOG(Fullscreen, "WebVideoFullscreenInterfaceAVKit::watchdogTimerFired(%p) - no exit fullscreen response in %gs; forcing fullscreen hidden.", this, defaultWatchdogTimerInterval); > > + LOG(Fullscreen, "WebVideoFullscreenInterfaceAVKit::watchdogTimerFired(%p) - no exit fullscreen; forcing fullscreen hidden.", this); > > Is this intentional?
I put this back in, but did defaultWatchdogTimerInterval.value() to convert to a double.
Jeremy Jones
Comment 5
2017-06-16 14:22:14 PDT
Created
attachment 313132
[details]
Patch for landing.
WebKit Commit Bot
Comment 6
2017-06-16 15:56:48 PDT
Comment on
attachment 313132
[details]
Patch for landing. Clearing flags on attachment: 313132 Committed
r218422
: <
http://trac.webkit.org/changeset/218422
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug